# minios

./: CMakeLists.txt  Mini_OS_Simulator_Presentation.pptx  README.md  doc.ini  tree_structure_code.docx  tree_structure_code.md
documentation/: api_docs.txt  design_docs.txt  perf_analysis  user_manual
include/: Makefile.txt  simulator.hpp  types.hpp
include/ipc/: ipc_common.hpp  message_queue.hpp  pipe.hpp  shared_memory.hpp
include/process/: process.hpp  process_manager.hpp
include/resource/: resource_manager.hpp
include/thread/: condition_variable.hpp  mutex.hpp  semaphore.hpp  thread_pool.hpp
source/: README.md
source/scheduler/: cpuSchedulerDriver.cpp  cpuSchedulerHeader.h  firstComeFirstServerSchedulingAlgorithmHeader.cpp  prioritySchedulingAlgorithmHeader.cpp  roundRobinSchedulingAlgorithmHeader.cpp  shortestJobFirstPreemptiveSchedulingAlgorithmHeader.cpp  shortestJobFirstSchedulingAlgorithmHeader.cpp
source/scheduler/documentation/: DocumentationWithOutput.docx  design_details.txt  ~$cumentationWithOutput.docx
src/: calculator.cpp  main.cpp  simulator.cpp
src/ipc/: message_queue.cpp  pipe.cpp  shared_memory.cpp
src/process/: process.cpp  process_manager.cpp
src/resource/: resource_manager.cpp
src/scheduler/: cpuSchedulerDriver.cpp  cpuSchedulerHeader.h  firstComeFirstServerSchedulingAlgorithmHeader.cpp  roundRobinSchedulingAlgorithmHeader.cpp  shortestJobFirstPreemptiveSchedulingAlgorithmHeader.cpp  shortestJobFirstSchedulingAlgorithmHeader.cpp
src/thread/: condition_variable.cpp  mutex.cpp  semaphore.cpp  thread_pool.cpp
